# synthetic-yolo-domain-gap

./: .env.example  .gitignore  AGENTS.md  FINALIZATION_PLAN.md  FINALIZATION_STATE.json  PROJECT_STATE.md  README.md  h  pyproject.toml
apps/api/: .env.example  README.md
apps/web/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
configs/: project.yaml
configs/datasets/: aquarium_penguin_review_v2.yaml  aquarium_review.yaml
configs/evaluation/: sprint5_final.yaml
configs/synthetic/: aquarium_synthetic_class_balanced.yaml  aquarium_synthetic_v1.yaml
configs/training/: base_weight.yaml  common.yaml  smoke.yaml  (+1 more)
docs/: api_contracts.md  dashboard_architecture.md  dataset_protocol.md  decision_log.md  evaluation_protocol.md  experiment_protocol.md  final_defense_questions_ar.md  final_demo_guide_ar.md  final_executive_summary_ar.md  final_executive_summary_en.md  final_limitations.md  final_methodology.md  final_report_ar.md  final_report_en.md  final_reproducibility_appendix.md  final_results.md  project_scope.md  reproducibility.md  sprint6_plan.md  synthetic_generation.md  training_protocol.md  ui_design_system.md
manifests/: README.md
notebooks/: README.md  sprint4b_full_training_colab.ipynb
presentation/: DEFENSE_QA_AR.md  DEMO_SCRIPT_AR.md  PRESENTATION_CHECKLIST.md  PRESENTATION_VALIDATION.json  SPEAKER_NOTES_AR.md  SynthDet_Final_Presentation.pptx
scripts/: acquire_aquarium.py  analyze_duplicates.py  analyze_sprint5_results.py  audit_dataset.py  audit_experiments.py  audit_real_split.py  audit_synthetic.py  build_experiments.py  build_final_presentation.py  build_object_bank.py  build_training_bundle.py  check_environment.py  check_leakage.py  colab_train.py  create_real_splits.py  export_dashboard_snapshot.py  finalize_aquarium_review.py  finalize_training_results.py  freeze_sprint5_contract.py  generate_final_assets.py  generate_synthetic.py  gpu_preflight.py  import_aquarium.py  inspect_training_environment.py  intake_sprint4b_results.py  materialize_training_bundle.py  propose_source_groups.py  review_penguin_groups.py  run_all_regimes.py  run_sprint5_evaluation.py  train_yolo.py  validate_colab_notebook.py  validate_dataset.py  validate_experiments.py  validate_reviews.py  validate_smoke_runs.py  validate_synthetic.py  validate_training_bundle.py  validate_training_runtime.py
tests/: test_api.py  test_config.py  test_dataset_pipeline.py  test_sprint4b_intake.py  test_sprint4b_pipeline.py  test_sprint5_analysis.py  test_sprint5_campaign.py  test_sprint5_contract.py  test_synthetic_pipeline.py  test_training_pipeline.py
(+150 files in other folders)
