[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "synthetic-yolo-domain-gap"
version = "0.1.0"
description = "Reproducible experiments for measuring the synthetic-to-real domain gap in YOLO object detection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - academic project" }
authors = [{ name = "University Computer Vision Project Team" }]
dependencies = [
  "albumentations>=1.4,<3",
  "fastapi>=0.115,<1",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<3",
  "opencv-python>=4.9,<5",
  "pandas>=2.2,<3",
  "pillow>=10,<12",
  "plotly>=5.24,<7",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
  "ultralytics>=8.3,<9",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
synthdet-check = "synthdet.environment:main"

[tool.hatch.build.targets.wheel]
packages = ["src/synthdet"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["datasets", "artifacts", "models", "runs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

